--- a/0.1-Qué_es_un_programa.ipynb
+++ b/0.1-Qué_es_un_programa.ipynb
@@ -169,8 +169,13 @@
     "\n",
     "|Enunciado|1|2|3|4|\n",
     "|-|-|-|-|-|\n",
-    "|¿Es código?|||||\n",
-    "|¿Es pseudocódigo?|||||"
+    "|¿Es código?|no|no|no|no|\n",
+    "|¿Es pseudocódigo?|no|si|si|si|\n",
+    "\n",
+    "Ninguno de los encunciados pueden ser códigos pues tal cual está el texto no puede ser procesado por la computadora, aún tendría que pasar por un lenguaje de programación (con sitáxis y semántica propia).\n",
+    "El 1, no es código ni pseudocódigo pues no puede ser interpretado tal cual esta por una computadora. Antes habría que definir \"átomo\" y \"universo\".\n",
+    "Los enunciados 2 y 4 si pueden ser tomados como pseudocódigos, pues es algo que puede interpretar una computadora con el intermediario del lenguaje de programación.\n",
+    "Para el enunciado 3, se puede considerar como un pseudocódigo pues si puede ser interpretado por una computadora, sin embargo al dejar el márgen abierto se volvería una operación infinita donde no se cuenta con la memoria ni el tiempo. Por lo que estrictamente si se puede considerar como un pseudocódigo, pero para hacerlo posible se deben establecer parámetros o límites del rango que se abarcará."
    ]
   },
   {
@@ -185,15 +190,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
-   "language": "julia",
-   "name": "julia-1.8"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.8.5"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
